--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ The below publications represent my work to date. A full list of publications is
 
 Kuczynski L., Côte J., **Toussaint A.**, Brosse S., Buisson L., Grenouillet G. Spatial mismatch in morphological, ecological and phylogenetic diversity, in historical and contemporary European freshwater fish faunas. *Ecography*, 41, 1665-1674. [pdf](data/2018_Kuczinski_et_al_Ecography.pdf)
 
-Tedersoo L., Laanisto L., Rahimlou S., **Toussaint A.**, Hallikma T., Pärtel M. Global database of plants with root‐symbiotic nitrogen fixation: Nod DB. *Journal of Vegetation Science*, 10, 560-568 [pdf](data/2018_Tedersoo_JVS.pdf)
+Tedersoo L., Laanisto L., Rahimlou S., **Toussaint A.**, Hallikma T., Pärtel M. Global database of plants with root‐symbiotic nitrogen fixation: Nod DB. *Journal of Vegetation Science*, 29(3), 560-568 [pdf](data/2018_Tedersoo_JVS.pdf)
 
 ## 2016
 
