--- a/contact.Rmd
+++ b/contact.Rmd
@@ -1,6 +1,10 @@
 ---
+title: ""
+pagetitle: "Contact"
+fontsize: 14pt
 ---
-
+<title>Contact</title>
+<link rel="shortcut icon" href="data/imageTitle.png" type="image/png">
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 Institute of Ecology and Earth Sciences, Department of Botany<br>
