--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ output:
 
 My main research interest is investigating questions related to functional diversity of vertebrates and plants in a context of global change. I am currently a research fellow at the [University of Tartu](https://www.botany.ut.ee/macroecology/en/) in the Macroecology workgroup with [Pr. Meelis Pärtel](https://www.botany.ut.ee/macroecology/en/partel) and [Dr. Carlos P. Carmona](https://www.botany.ut.ee/macroecology/en/carmona). 
 
-I am also involved in different [projects](https://aureletoussaint.github.io/aurele/blogPerso.html).
+I am also involved in different [projects](https://aureletoussaint.github.io/website/Projects.html).
 
 I graduated from the [University of Toulouse](http://www.univ-tlse3.fr/) with a MS in biostatistics in 2012. In 2012 I started my PhD in macroecology at [EDB-lab](www.edb.ups-tlse.fr), where I was investigating functional diversity of freshwater fishes at the world scale under the advisement of [Pr. Sébastien Brosse](http://brosse.sebastien.free.fr/) and [Dr. Sébastien Villéger](http://villeger.sebastien.free.fr/) 
 
